<resources>
    <string name="app_name">DreamStream</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="start_dreamstream">Start DreamStream</string>
    <string name="settings">Settings</string>
    <string name="what_role_should_this_device_take">What role should this device take?</string>
    <string name="sender">Sender</string>
    <string name="receiver">Receiver</string>
    <string name="home">Home</string>
    <string name="error_missing_permissions">Cannot start without required permissions</string>
    <string name="state_available">available</string>
    <string name="state_searching">searching</string>
    <string name="state_connected">connected</string>
    <string name="state_unknown">unknown</string>
    <string name="toast_connected">Connected to %s</string>
    <string name="toast_disconnected">Disconnected from %s</string>
    <string name="vibration">Vibration</string>
    <string name="save_settings">Save Settings</string>
    <string name="sharedPref">dreamstreamSharedPrefs</string>
    <string name="dreamstream_logo">DreamStream Logo</string>
    <string name="connect_to_receiver">Connect to receiver</string>
    <string name="qr_code_prevent_memory_leak">QR-Code scanner has been stopped</string>
    <string name="qr_scanner_started">QR-Code scanner started</string>
    <string name="qr_code_placeholder">QR-Code placeholder</string>
    <string name="no_qr_code_detected">No QR-Code detected</string>
    <string name="scan_qr_code_with_sender_device">Scan QR-Code with sending device</string>
    <string name="service_id_must_not_be_empty">Connection name must not be empty</string>
    <string name="disconnect">Disconnect</string>
    <string name="threshold">Threshold</string>
    <string name="voice_message">Voice Message</string>
    <string name="continue_as_selected_role">Continue as selected Role</string>
</resources>
